Sidebar width fixed
- Fixed sidebar width overflowing screen

--- a/css/index.css
+++ b/css/index.css
@@ -64,7 +64,8 @@
   display: flex;
   flex-direction: column;
   width: 100vh;
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100%;
   /* padding: 20px; */
   background-color: #0f172a;
   color: #fff;
